force-app/main/default/objects/wrike2__Log__c/wrike2__Log__c.object-meta.xml
<CustomObject>
    <label>Wrike Log</label>
    <nameField>
        <displayFormat>LOG-{0000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Wrike Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>