force-app/main/default/objects/wrike2__Log__c/fields/wrike2__Details__c.field-meta.xml
<CustomField>
    <fullName>wrike2__Details__c</fullName>
    <label>Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>