force-app/main/default/objects/wrike2__Log__c/fields/wrike2__Level__c.field-meta.xml
<CustomField>
    <fullName>wrike2__Level__c</fullName>
    <label>Level</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Info</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>