force-app/main/default/objects/wrike2__Log__c/fields/wrike2__Method__c.field-meta.xml
<CustomField>
    <fullName>wrike2__Method__c</fullName>
    <label>Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>