force-app/main/default/objects/wrike2__Log__c/listViews/wrike2__All.listView-meta.xml
<ListView>
    <fullName>wrike2__All</fullName>
    <columns>NAME</columns>
    <columns>wrike2__Class__c</columns>
    <columns>wrike2__Method__c</columns>
    <columns>wrike2__Message__c</columns>
    <columns>wrike2__Details__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>